--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,6 +27,10 @@ body {
 
 .dateTime {
   margin-top: 5vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   .date {
     font-size: 35px;
   }
@@ -38,10 +42,26 @@ body {
   .date,
   .clock {
     color: #fff;
+  }
 
+  .location {
     display: flex;
+    gap: 10px;
     justify-content: center;
     align-items: center;
+  }
+
+  .icon {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-size: cover;
+    fill: #fff;
+  }
+
+  .text {
+    font-size: 30px;
+    color: #fff;
   }
 }
 
