--- a/styles/globals.css
+++ b/styles/globals.css
@@ -115,12 +115,18 @@
 
 html,
 body {
-  background: black;
+  @apply w-full h-full;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, Poppins, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, Poppins, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: 600;
+  background: linear-gradient(
+    #11181e 0%,
+    #2b6499 53.58%,
+    #80a4be 88.02%,
+    #ffe9b1 100%
+  );
 }
 
 a {
@@ -143,24 +149,23 @@ a {
 } */
 
 .card {
-  @apply flex flex-col items-center justify-center p-5;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  min-width: 250px;
-  max-width: 300px;
-  height: 150px;
+  @apply p-5 aspect-w-3 aspect-h-2;
+  min-width: 225px;
+  min-height: 150px;
 }
 
 .glass {
   background: linear-gradient(
-    218.99deg,
-    rgba(255, 255, 255, 0.2) 4.42%,
-    rgba(255, 255, 255, 0) 85.6%
-  );
-  backdrop-filter: blur(5px);
+      324.78deg,
+      rgba(255, 255, 255, 0) 1.95%,
+      rgba(255, 255, 255, 0.31) 107.98%
+    ),
+    rgba(58, 58, 58, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+  backdrop-filter: blur(21px);
   /* Note: backdrop-filter has minimal browser support */
 
-  border-radius: 16px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 15px;
   color: white;
 }
 
